# polkapad-smarts

./: README.md
contracts/token/: Cargo.toml
contracts/token/src/: event.rs  lib.rs  token.rs
contracts/wallet/: Cargo.toml
contracts/wallet/src/: lib.rs
